--- a/template.css
+++ b/template.css
@@ -200,10 +200,10 @@
 .text-block .checkbox label:after {
     width: 16px;
     height: 16px;
-    top: -5px;
+    top: -6px;
     padding-left: 0;
     padding-top: 0;
-    font-size: 20px;
+    font-size: 21px;
     color: #555;
 }
 
@@ -410,4 +410,14 @@
 #user_phone::-moz-placeholder {
     font-family: CuprumRegular, sans-serif;
     font-size: 14px;
+}
+
+.text-block .name,
+.text-block .param {
+    margin-bottom: 0;
+}
+
+/* not my design fix */
+.col-main {
+    width: 100%;
 }
